Set stylus import path in gulpfile.js

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,4 +1,7 @@
-@import '../../node_modules/nib'
+// ---------------------------------------------------------------------------
+// Imports
+// ---------------------------------------------------------------------------
+@import 'nib'
 
 // ---------------------------------------------------------------------------
 // Variables
