Add css3 transition, modernizer detection

--- a/src/templates/page-layout.jade
+++ b/src/templates/page-layout.jade
@@ -73,6 +73,7 @@ html(lang="en")
       | Exerci ut huic. Velit epulae aptent tamen et ut ut. Vel et damnum eum
       | multo antehabeo ex vel consequat facilisis.
 
+  script(src='js/modernizer.custom.js')
   script(src='js/jquery.js')
   script(src='js/jquery.jcarousel.js')
   script(src='js/site.js')
